<resources>
    <string name="app_name">Athan Helper</string>

    <string name="title_activity_settings">Settings</string>


    <string name="day_placeholder">Monday, 03/17</string>
    <string name="dawn">Dawn</string>
    <string name="dawn_time_placeholder">5:45</string>
    <string name="postfix_am">am</string>
    <string name="afternoon">Afternoon</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="afternoon_time_placeholder">3:37</string>
    <string name="postfix_pm">pm</string>
    <string name="night">Night</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_time_placeholder">6:07</string>
    <string name="midday_text_placeholder">12:20</string>
    <string name="mid_day">Mid-day</string>
    <string name="night_text_placeholder">7:07</string>

    <!--Calculation Methods-->
    <string-array name="pref_calc_methods">
        <item>Ithna Ashari</item>
        <item>University of Islam Sciences, Karachi</item>
        <item>Islamic Society of North America (ISNA)</item>
        <item>Muslim World League (MWL)</item>
        <item>Umm al-Qura, Makkah</item>
        <item>Egyptian General Authority of Survey</item>
        <item>Institute of Geophysics, University of Tehran</item>
    </string-array>
    <string-array name="pref_calc_methods_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!--Juristic Methods-->
    <string-array name="pref_juristic_methods">
        <item>Shafii</item>
        <item>Hanafi</item>
    </string-array>
    <string-array name="pref_juristic_methods_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!--Adjusting Methods for Higher Latitudes-->
    <string-array name="pref_high_latitudes">
        <item>No Adjustment</item>
        <item>Middle of Night</item>
        <item>1/7th of Night</item>
        <item>Angle Based (1/60th of Night)</item>
    </string-array>
    <string-array name="pref_high_latitudes_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!--Set Time Format-->
    <string-array name="pref_time_formats">
        <item>24-hour Format</item>
        <item>12-hour Format</item>
        <item>12-hour Format w/ No Suffix</item>
    </string-array>
    <string-array name="pref_time_format_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <integer-array name="img_id_arr">
        <item>@drawable/grey_oval</item>
        <item>@drawable/grey_oval</item>
        <item>@drawable/grey_oval</item>
        <item>@drawable/grey_oval</item>
    </integer-array>

</resources>
